# saga-order-service/src/main/java/br/com/vnrg/sagaorderservice/entity/OrderEntity.java
@@ -1,9 +1,54 @@
 package br.com.vnrg.sagaorderservice.entity;
 
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import javax.persistence.*;
+import java.time.LocalDateTime;
 
 @Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Entity
+@Table(name = "order")
 public class OrderEntity {
-    private String orderId;
-    private String orderType;
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+
+    @Column(name = "order_type")
+    private Integer orderType;
+
+    @Column(name = "order_description")
+    private String orderDescription;
+
+    @Column(name = "order_state")
+    private Integer orderState;
+
+    @Column(name = "product_id")
+    private String productId;
+
+    @Column(name = "product_description")
+    private String productDescription;
+
+    @Column(name = "customer_id")
+    private String customerId;
+
+    @Column(name = "created_at")
+    private LocalDateTime createdAt;
+
+    @Column(name = "user_created")
+    private String userCreated;
+
+    @Column(name = "updated_at")
+    private LocalDateTime updatedAt;
+
+    @Column(name = "user_updated")
+    private String userUpdated;
+
+    @Column(name = "product_items")
+    private Integer productItems;
+
 }
